--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -107,14 +107,14 @@
                                                     <a role="menuitem" a data-toggle="collapse" tabindex="-1" href="#collapse4"><span class="glyphicon glyphicon-chevron-down"></span>&emsp;Tier Page</a>
                                                     <div id="collapse4" class="panel-collapse collapse">
                                                         <ul class="list-group">
-                                                            <li class="list-group-item">@Html.ActionLink("Dessert Enterprise Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("Breakfast Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("Regular Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("McCafe level 2 Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("McCafe level 3 Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("McCafe BISTRO Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("MDS Price Tier", "Index", "Home")</li>
-                                                            <li class="list-group-item">@Html.ActionLink("Project Gold Price Tier", "Index", "Home")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("Dessert Enterprise Tier", "Index", "DessertPriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("Breakfast Price Tier", "Index", "BreakfastPriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("Regular Price Tier", "Index", "RegularPriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("McCafe level 2 Price Tier", "Index", "McCafeLevel2PriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("McCafe level 3 Price Tier", "Index", "McCafeLevel3PriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("McCafe BISTRO Price Tier", "Index", "McCafeBistroPriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("MDS Price Tier", "Index", "MDSPriceTier")</li>
+                                                            <li class="list-group-item">@Html.ActionLink("Project Gold Price Tier", "Index", "ProjectGoldPriceTier")</li>
                                                         </ul>
                                                     </div>
                                                 </li>
