--- a/CFMMCD/Views/Account/CreateAccount.cshtml
+++ b/CFMMCD/Views/Account/CreateAccount.cshtml
@@ -64,7 +64,7 @@
                 </div>
                 <div class="checkbox">
                     <label>
-                        @Html.CheckBoxFor(m => m.VENInput)
+                        @Html.CheckBoxFor(m => m.VEMInput)
                         Vendor Page
                     </label>
                 </div>
